Fix card container from overflowing with few cards

--- a/style.css
+++ b/style.css
@@ -9,15 +9,16 @@ html {
   height: 100%;
 }
 
-body{
+body {
   font-family: monospace;
-  height: 100%;
+  min-height: 100vh;
   display: grid;
-  grid-template-rows: 1fr 6.5fr;
+  grid-template-rows: auto 1fr;
   overflow-x: hidden;
+  overflow-y: auto;  
   font-size: 1.6rem;
-  
 }
+
 
 .header{
 
@@ -187,16 +188,15 @@ body{
 
   display: grid;
   gap: 4.5rem;
-  grid-template-rows: repeat(3,1fr);
   grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
-
+  grid-auto-rows: max-content;
   background-color: #151515;
 }
 
 .card{
   background-color: #1e1e1e;
   border: 2px solid rgb(138,43,226);
-  border-left: 8px solid rgb(255, 252, 231);
+  border-left: 8px solid rgb(179, 0, 255);
   border-radius: 10px;
   padding: 2rem;
 
